--- a/css/main.sass
+++ b/css/main.sass
@@ -5,7 +5,51 @@ $bk_color_2: #fddd37
 $white: #fff
 $black_font: 900
 $extra_bold: 800
-
+header
+    background-color: $bk_color_1
+    padding: 35px 0 73px
+.header_top
+    max-width: 1180px
+    margin: 0 auto
+    overflow: hidden
+.right_header_link
+    float: right
+    color: #fff
+    font-family: $font_stack_1
+    font-size: 16px
+.botttom_header
+    margin-top: 110px
+    margin: 0 auto
+    max-width: 960px
+    position: relative
+.page_title
+    font-family: $font_stack_2
+    color: $white
+    font-weight: $black_font
+    font-size: 70px
+    line-height: 1.21
+    max-width: 661px
+.image_block
+    position: absolute
+    top: 0
+    right: 0
+    max-width: 478px
+    max-height: 488px
+.main_descripton
+    font-family: $font_stack_1
+    color: $white
+    line-height: 1.25
+    font-size: 20px
+    max-width: 454px
+    margin-bottom: 50px
+.btn
+    text-decoration: none
+    background: #fff
+    font-family: $font_stack_1
+    font-size: 23px
+    color: #0075ff
+    padding: 19.5px 34px
+    display: inline-block
     
     
     
