--- a/css/main.sass
+++ b/css/main.sass
@@ -84,6 +84,26 @@ header
     color: #000
     line-height: 1.38
     font-size: 16px
+.product_block
+    background-color: $bk_color_2
+.product_block_inner
+    max-width: 1196px
+    margin: 0 auto
+.product_block_image
+    margin-top: 221px
+    display: inline-block
+.product_block_title
+    color: #000
+    font-family: $font_stack_2
+    max-width: 445px
+    font-size: 55px
+    font-weight: $extra_bold
+    display: inline-block
+    vertical-align: top
+    margin: 252px 0 0 60px
+.product_block_inner
+    background: url(../images/fill.png)no-repeat
+    background-position: right 52px
     
     
     
