--- a/css/main.sass
+++ b/css/main.sass
@@ -104,7 +104,45 @@ header
 .product_block_inner
     background: url(../images/fill.png)no-repeat
     background-position: right 52px
-    
+.sale_block
+    background-color: $bk_color_1
+    padding: 125px 0 170px
+.sale_block_inner
+    max-width: 980px
+    margin: 0 auto
+.sale_block_title
+    font-size: 59px
+    color: $white
+    font-family: $font_stack_2
+    font-weight: $black_font
+    line-height: 1.21
+    max-width: 460px
+    margin: 0px 80px 0 0
+    display: inline-block
+    vertical-align: top
+.sale_block_right_col
+    display: inline-block
+    width: 430px
+    float: right
+.sale_block_descr
+    font-family: $font_stack_1
+    line-height: 1.1
+    color: $white
+    font-size: 20px
+.sale_block_form input
+    outline: none
+    border: none
+    background-color: #2d8dff
+    color: $white
+    font-size: 23px
+    margin-bottom: 15px
+    box-sizing: border-box
+    width: 446px
+    height: 55px
+    padding-left: 15px
+.sale_btn_wrap
+    text-align: center
+    padding-top: 20px
     
     
 
