--- a/css/main.css
+++ b/css/main.css
@@ -118,4 +118,50 @@ header {
   background: url(../images/fill.png) no-repeat;
   background-position: right 52px; }
 
+.sale_block {
+  background-color: #0075ff;
+  padding: 125px 0 170px; }
+
+.sale_block_inner {
+  max-width: 980px;
+  margin: 0 auto; }
+
+.sale_block_title {
+  font-size: 59px;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-weight: 900;
+  line-height: 1.21;
+  max-width: 460px;
+  margin: 0px 80px 0 0;
+  display: inline-block;
+  vertical-align: top; }
+
+.sale_block_right_col {
+  display: inline-block;
+  width: 430px;
+  float: right; }
+
+.sale_block_descr {
+  font-family: Helveticaneue;
+  line-height: 1.1;
+  color: #fff;
+  font-size: 20px; }
+
+.sale_block_form input {
+  outline: none;
+  border: none;
+  background-color: #2d8dff;
+  color: #fff;
+  font-size: 23px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+  width: 446px;
+  height: 55px;
+  padding-left: 15px; }
+
+.sale_btn_wrap {
+  text-align: center;
+  padding-top: 20px; }
+
 /*# sourceMappingURL=main.css.map */
